Fix Social Icons Overlapping issue in mobile view

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -254,7 +254,7 @@ blockquote {
   text-align: center;
   display: flex;
   justify-content: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   .contact-icons {
     font-size: 2rem;
     height: 2rem;
